--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -5,19 +5,19 @@
     <!-- [s] HeaderView Attrs -->
     <declare-styleable name="HeaderView">
         <attr name="header_type" format="enum">
-            <enum name="none" value="0"/>
-            <enum name="title" value="1"/>
-            <enum name="img" value="2"/>
-            <enum name="img_search" value="3"/>
+            <enum name="none" value="0" />
+            <enum name="title" value="1" />
+            <enum name="img" value="2" />
+            <enum name="img_search" value="3" />
         </attr>
     </declare-styleable>
     <!-- [e] HeaderView Attrs -->
 
     <!-- [s] BlurView Attrs -->
     <declare-styleable name="BlurView">
-        <attr name="blurRadius" format="dimension"/>
-        <attr name="downSampleFactor" format="float"/>
-        <attr name="overlayColor" format="color"/>
+        <attr name="blurRadius" format="dimension" />
+        <attr name="downSampleFactor" format="float" />
+        <attr name="overlayColor" format="color" />
     </declare-styleable>
     <!-- [e] BlurView Attrs -->
 
@@ -34,20 +34,22 @@
         <attr name="textSize" format="dimension" />
         <attr name="iconSize" format="dimension" />
         <attr name="iconMargin" format="dimension" />
-        <attr name="iconTint" format="color"/>
-        <attr name="iconTintActive" format="color"/>
+        <attr name="iconTint" format="color" />
+        <attr name="iconTintActive" format="color" />
         <attr name="cornerRadius" format="dimension" />
         <attr name="activeItem" format="integer" />
         <attr name="duration" format="integer" />
     </declare-styleable>
     <!-- [e] BottomToolbar Attrs -->
 
+    <!-- [s] CustomBottomSheetBehavior Attrs -->
     <declare-styleable name="CustomBottomSheetBehavior">
         <attr name="bottomSheet_peekHeight" format="dimension" />
-        <attr name="bottomSheet_hideable" format="boolean"/>
-        <attr name="bottomSheet_skipHalfExpand" format="boolean"/>
-        <attr name="bottomSheet_skipCollapsed" format="boolean"/>
+        <attr name="bottomSheet_hideable" format="boolean" />
+        <attr name="bottomSheet_skipHalfExpand" format="boolean" />
+        <attr name="bottomSheet_skipCollapsed" format="boolean" />
     </declare-styleable>
+    <!-- [e] CustomBottomSheetBehavior Attrs -->
 
     <declare-styleable name="SwipeRevealLayout">
         <attr name="dragEdge">
@@ -59,12 +61,19 @@
 
         <attr name="mode">
             <enum name="normal" value="0" />
-            <enum name="same_level"   value="1" />
+            <enum name="same_level" value="1" />
         </attr>
 
         <attr name="flingVelocity" format="integer" />
 
         <attr name="minDistRequestDisallowParent" format="dimension" />
     </declare-styleable>
+
+    <!-- [s] FlexibleImageView Attrs -->
+    <declare-styleable name="FlexibleImageView">
+        <attr name="onlyMove" format="boolean" />
+    </declare-styleable>
+    <!-- [e] FlexibleImageView Attrs -->
+
 
 </resources>
