2020. 10. 07. 수정사항 - FlexibleImageView 코드 개선 - Drag And Drop 기능 개선 - Swipe 기능 추가

--- a/app/src/main/res/layout/activity_image_edit.xml
+++ b/app/src/main/res/layout/activity_image_edit.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -13,67 +14,120 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <!-- 사진 영역 -->
+        <!-- 헤더 영역 -->
         <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/llHeader"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:paddingTop="@dimen/padding_size_10"
+            android:paddingBottom="@dimen/padding_size_10"
             android:weightSum="2"
             app:layout_constraintTop_toTopOf="parent">
 
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:text="Left"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/text_size_14" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:text="Right"
+                android:textColor="@color/colorPrimary"
+                android:textSize="@dimen/text_size_14" />
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+        <!-- 사진 영역 -->
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/llContents"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:orientation="horizontal"
+            android:weightSum="2"
+            app:layout_constraintDimensionRatio="w,1:1"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/llHeader">
+
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/clBefore"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
+                android:id="@+id/clLeft"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:tag="@string/str_before_root_tag">
 
                 <com.hmju.memo.widget.flexibleImageView.FlexibleImageView
+                    android:id="@+id/imgLeft"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:adjustViewBounds="true"
-                    app:bindImgGallery="@{viewModel.beforePhotoPath}"
-                    app:targetView="@{clBefore}"
-                    app:viewModel="@{viewModel}" />
+                    android:scaleType="fitCenter"
+                    android:tag="@string/str_before_tag"
+                    app:bindUri="@{viewModel.leftPhotoPath}"
+                    app:rootView="@{clLeft}"
+                    app:targetView="@{clRight}"
+                    app:viewModel="@{viewModel}"
+                    tools:src="@drawable/temp2" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <!-- 구분선 -->
             <View
-                android:layout_width="match_parent"
-                android:layout_height="@dimen/size_1"
+                android:layout_width="@dimen/size_1"
+                android:layout_height="match_parent"
                 android:background="#e4e4e4" />
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/clAfter"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
+                android:id="@+id/clRight"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:tag="@string/str_after_root_tag">
 
                 <com.hmju.memo.widget.flexibleImageView.FlexibleImageView
+                    android:id="@+id/imgRight"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:adjustViewBounds="true"
-                    app:bindImgGallery="@{viewModel.afterPhotoPath}"
-                    app:targetView="@{clAfter}"
-                    app:viewModel="@{viewModel}" />
+                    android:scaleType="fitCenter"
+                    android:tag="@string/str_after_tag"
+                    app:bindUri="@{viewModel.rightPhotoPath}"
+                    app:rootView="@{clRight}"
+                    app:targetView="@{clLeft}"
+                    app:viewModel="@{viewModel}"
+                    tools:src="@drawable/temp1" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.appcompat.widget.LinearLayoutCompat>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/clBottom"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="?android:actionBarSize"
+            android:orientation="horizontal"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <com.google.android.material.button.MaterialButton
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="이미지 자르기"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:turtleClick="@{()->viewModel.cropImage(clBefore)}" />
+                android:text="이미지 합치기"
+                app:turtleClick="@{()->viewModel.mergeImage(llContents)}" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            <com.google.android.material.button.MaterialButton
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="@dimen/margin_size_5"
+                android:text="원래대로"
+                app:turtleClick="@{()->viewModel.resetPhoto()}" />
+
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
