--- a/app/src/main/res/layout/activity_image_edit.xml
+++ b/app/src/main/res/layout/activity_image_edit.xml
@@ -22,26 +22,16 @@
             android:orientation="horizontal"
             android:paddingTop="@dimen/padding_size_10"
             android:paddingBottom="@dimen/padding_size_10"
-            android:weightSum="2"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="center_horizontal"
-                android:text="Left"
+                android:text="후루뚜 빠라빠라랑"
                 android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/text_size_14" />
-
-            <androidx.appcompat.widget.AppCompatTextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:text="Right"
-                android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/text_size_14" />
+                android:textSize="@dimen/text_size_14"
+                android:textStyle="bold" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -50,6 +40,7 @@
             android:id="@+id/llContents"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:background="@color/colorWhite"
             android:orientation="horizontal"
             android:weightSum="2"
             app:layout_constraintDimensionRatio="w,1:1"
@@ -62,7 +53,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:tag="@string/str_before_root_tag">
+                android:tag="@string/str_left_root_tag">
 
                 <com.hmju.memo.widget.flexibleImageView.FlexibleImageView
                     android:id="@+id/imgLeft"
@@ -70,10 +61,9 @@
                     android:layout_height="match_parent"
                     android:adjustViewBounds="true"
                     android:scaleType="fitCenter"
-                    android:tag="@string/str_before_tag"
+                    android:tag="@string/str_left_tag"
                     app:bindUri="@{viewModel.leftPhotoPath}"
                     app:rootView="@{clLeft}"
-                    app:targetView="@{clRight}"
                     app:viewModel="@{viewModel}"
                     tools:src="@drawable/temp2" />
 
@@ -100,7 +90,7 @@
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:tag="@string/str_after_root_tag">
+                android:tag="@string/str_right_root_tag">
 
                 <com.hmju.memo.widget.flexibleImageView.FlexibleImageView
                     android:id="@+id/imgRight"
@@ -108,10 +98,9 @@
                     android:layout_height="match_parent"
                     android:adjustViewBounds="true"
                     android:scaleType="fitCenter"
-                    android:tag="@string/str_after_tag"
+                    android:tag="@string/str_right_tag"
                     app:bindUri="@{viewModel.rightPhotoPath}"
                     app:rootView="@{clRight}"
-                    app:targetView="@{clLeft}"
                     app:viewModel="@{viewModel}"
                     tools:src="@drawable/temp1" />
 
@@ -144,15 +133,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_marginRight="@dimen/margin_size_5"
-                    android:text="원본 그대로 바꾸기"
-                    app:turtleClick="@{()->viewModel.switchingOrigin()}" />
-
-                <com.google.android.material.button.MaterialButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_marginRight="@dimen/margin_size_5"
-                    android:text="현재 이미지 상태로 바꾸기"
-                    app:turtleClick="@{()->viewModel.switching()}" />
+                    android:text="이미지 전환"
+                    app:turtleClick="@{()->viewModel.switchImage()}" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
