--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -44,7 +44,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
-                        android:text="@{viewModel.selectedFilter.name}"
+                        android:text="@{viewModel.selectedFilter.bucketName}"
                         android:textColor="@color/colorTextPrimary"
                         android:textSize="@dimen/text_size_20"
                         tools:text="전체 보기" />
