2020. 10. 14. 수정사항 - RxJava 공부중...! - 기타 코드 개선

--- a/app/src/main/res/layout/activity_memo_detail.xml
+++ b/app/src/main/res/layout/activity_memo_detail.xml
@@ -155,11 +155,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/str_change"
+                        android:enabled="@{viewModel.isChanged}"
                         android:textColor="@color/colorTextWhite"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:turtleClick="@{()->viewModel.memoUpdate()}" />
+                        app:turtleClick="@{()->viewModel.postMemo()}" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
