--- a/app/src/main/res/layout/activity_memo_add.xml
+++ b/app/src/main/res/layout/activity_memo_add.xml
@@ -147,7 +147,7 @@
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:turtleClick="@{()->viewModel.addMemo()}" />
+                        app:turtleClick="@{()->viewModel.postMemo()}" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
