2020. 10. 14. 수정사항 - RxJava 공부중...! - 기타 코드 개선

--- a/app/src/main/res/layout/activity_memo_add.xml
+++ b/app/src/main/res/layout/activity_memo_add.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.hmju.memo.viewModels.MemoAddViewModel" />
+            type="com.hmju.memo.viewModels.MemoEditViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -142,7 +142,7 @@
                     <com.google.android.material.button.MaterialButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@{viewModel.isAddMemo ? @string/str_change : @string/str_add}"
+                        android:text="@{viewModel.manageNo == -1 ? @string/str_add : @string/str_change}"
                         android:textColor="@color/colorTextWhite"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintRight_toRightOf="parent"
