--- a/app/src/main/res/layout/activity_memo_detail.xml
+++ b/app/src/main/res/layout/activity_memo_detail.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="viewModel"
-            type="com.hmju.memo.viewModels.MemoDetailViewModel" />
+            type="com.hmju.memo.viewModels.MemoEditViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
