2020. 10. 28. 수정사항 - 공통 팝업 UI 수정 및 로직 수정

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -91,6 +91,7 @@
     <dimen name="size_90">90dp</dimen>
     <dimen name="size_100">100dp</dimen>
     <dimen name="size_105">105dp</dimen>
+    <dimen name="size_110">110dp</dimen>
     <dimen name="size_120">120dp</dimen>
     <dimen name="size_130">130dp</dimen>
     <dimen name="size_180">180dp</dimen>
